Feature was buggy/incomplete in some gcc 3 versions.

BUG: 155811

svn path=/branches/KDE/4.0/kdelibs/; revision=762074